[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pixutils'
version = '0.1'
dependencies = []
requires-python = '>=3.8'
authors = [
  { name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com' },
]
maintainers = [
  { name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com' },
]
description = 'Python pixutils'
readme = 'README.md'
license = { file = 'LICENSE.md' }
keywords = ['linux', 'kms', 'drm', 'v4l2']
classifiers = [
  'Programming Language :: Python',
  'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
  'Development Status :: 4 - Beta',
  'Operating System :: POSIX :: Linux',
]

[project.urls]
Homepage = 'https://github.com/tomba/pixutils'
Repository = 'https://github.com/tomba/pixutils.git'
'Bug Tracker' = 'https://github.com/tomba/pixutils/issues'

[project.optional-dependencies]
conv = ['numpy']
qt = ['PyQt6']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ['E', 'W', 'F', 'FA', 'Q', 'UP', 'PLE', 'PLW']
ignore = ['E741', 'E501', 'Q001', 'UP032']  # TODO: fix E501

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401', 'F403']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'
